syntax = "proto3";
package doxchain.oracle;

import "gogoproto/gogo.proto";
import "doxchain/oracle/v1beta1/params.proto";

option go_package = "github.com/be-heroes/doxchain/x/oracle/types";

message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
}
